# DL_Master

./: README.md  pyproject.toml
deep_learning_mastery/2_Numpy/: 1_Numpy_Introduction_and_Installation.ipynb  2_Creating_Arrays_Numpy.ipynb  3_Shape_and_Reshape.ipynb  4_Array_Indexing.ipynb  5_Array_Iterating_Practical.ipynb  6_Array_Slicing.ipynb  7_Searching_and_Sorting_numpy_array_prac.ipynb
deep_learning_mastery/3_Pandas/: 10_Pandas_DataFrame_Practical.ipynb  8_Pandas_Intro_and_Installation.ipynb  9_Pandas_Series.ipynb
deep_learning_mastery/3_Pandas/11_Read_CSV/: Read_CSV.ipynb
deep_learning_mastery/3_Pandas/12_Analyzing_DataFrames/: Analyzing_DataFrames.ipynb
deep_learning_mastery/4_Matplotlib_and_Seaborn_for_Data_Visualization/: 13_Matplotlib_Intro_and_Getting_started.ipynb  14_Different_types_of_plots_in_Matplotlib.ipynb  15_Seaborn.ipynb
deep_learning_mastery/5_Machine_Learning_Fundamentals/: 20_Machine_Learning_Life_Cycle.pptx  22_Feature_Scaling.ipynb  24_Machine_Learning_Evaluation_Metrics.pptx
deep_learning_mastery/5_Machine_Learning_Fundamentals/21_Working_with_Missing_Values/: notebook.ipynb
deep_learning_mastery/5_Machine_Learning_Fundamentals/23_Feature_Encoding/: notebook.ipynb
deep_learning_mastery/6_Artificial_Neural_Networks_ANN/: 26_Activation_Functions.pptx  27_Optimizers.pptx
deep_learning_mastery/6_Artificial_Neural_Networks_ANN/28_Gold_Price_Prediction/: notebook.ipynb
deep_learning_mastery/7_Convolutional_Neural_Networks_CNN/: 30_Convolutional_Neural_Networks_CNN.pptx  31_CNN.ipynb
(+2 files in other folders)
