[tool.poetry]
name = "deep-learning-mastery"
version = "0.1.0"
description = ""
authors = ["FarellFahrozi <farellfahroziofficial@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
keras = "^3.7.0"
numpy = "^1.26"
tensorflow = "^2.18.0"
scikit-learn = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
